@@ -1,90 +1,0 @@
-{
-   "abstract" : "Path::Tiny types and coercions for Moose",
-   "author" : [
-      "David Golden <dagolden@cpan.org>"
-   ],
-   "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.131560",
-   "license" : [
-      "apache_2_0"
-   ],
-   "meta-spec" : {
-      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
-      "version" : "2"
-   },
-   "name" : "MooseX-Types-Path-Tiny",
-   "no_index" : {
-      "directory" : [
-         "t",
-         "xt",
-         "examples",
-         "corpus"
-      ],
-      "package" : [
-         "DB"
-      ]
-   },
-   "prereqs" : {
-      "configure" : {
-         "requires" : {
-            "ExtUtils::MakeMaker" : "6.30"
-         }
-      },
-      "develop" : {
-         "requires" : {
-            "Pod::Coverage::TrustPod" : "0",
-            "Test::CPAN::Meta" : "0",
-            "Test::Pod" : "1.41",
-            "Test::Pod::Coverage" : "1.08"
-         }
-      },
-      "runtime" : {
-         "requires" : {
-            "Moose" : "2",
-            "MooseX::Types" : "0",
-            "MooseX::Types::Moose" : "0",
-            "MooseX::Types::Stringlike" : "0",
-            "Path::Tiny" : "0",
-            "perl" : "5.006",
-            "strict" : "0",
-            "warnings" : "0"
-         }
-      },
-      "test" : {
-         "requires" : {
-            "ExtUtils::MakeMaker" : "0",
-            "File::Find" : "0",
-            "File::Spec::Functions" : "0",
-            "File::Temp" : "0.18",
-            "File::pushd" : "0",
-            "List::Util" : "0",
-            "Test::Fatal" : "0",
-            "Test::More" : "0.96"
-         }
-      }
-   },
-   "provides" : {
-      "MooseX::Types::Path::Tiny" : {
-         "file" : "lib/MooseX/Types/Path/Tiny.pm",
-         "version" : "0.005"
-      }
-   },
-   "release_status" : "stable",
-   "resources" : {
-      "bugtracker" : {
-         "web" : "https://github.com/karenetheridge/moosex-types-path-tiny/issues"
-      },
-      "homepage" : "https://metacpan.org/release/MooseX-Types-Path-Tiny",
-      "repository" : {
-         "type" : "git",
-         "url" : "git://github.com/dagolden/moosex-types-path-tiny.git",
-         "web" : "https://github.com/dagolden/moosex-types-path-tiny"
-      }
-   },
-   "version" : "0.005",
-   "x_contributors" : [
-      "Karen Etheridge <ether@cpan.org>",
-      "Toby Inkster <mail@tobyinkster.co.uk>"
-   ]
-}
-
