@@ -4,24 +4,17 @@ license = Apache_2_0
 copyright_holder = David Golden
 copyright_year   = 2013
 
-[@DAGOLDEN]
-:version = 0.035
-; TODO: if PluginRemover was being used, we could more easily swap out these
-; config settings with our own.
-AutoMetaResources.bugtracker.rt = 0
-AutoMetaResources.bugtracker.github = user:karenetheridge
-stopwords = AbsDir
-stopwords = AbsFile
-stopwords = AbsPath
-stopwords = SUBTYPES
-stopwords = coercions
-stopwords = diretory
-stopwords = subtype
-stopwords = subtypes
--remove = CheckExtraTests
-no_minimum_perl = 1
+[@Author::ETHER]
+:version = 0.009
+Test::MinimumVersion.max_target_perl = 5.008001
 
-[RunExtraTests]
+; authordep Pod::Weaver::Section::Contributors
+[ContributorsFromGit]
 
-[Test::MinimumVersion]
-max_target_perl = 5.008001
+[Test::Perl::Critic]
+
+[Test::ReportPrereqs]
+
+[Test::Portability]
+options = test_one_dot = 0
+
