@@ -1,0 +1,8 @@
+[@Default]
+
+[-Transformer]
+transformer = List
+
+[-StopWords]
+
+[-Encoding]
